test/compile-fail/resolution/use/self-no-name/expected.txt
error: unresolved item `b`
 --> top.rhdl:3:13
  |
3 | use self::a::b;
  |              ^ no `b` in `a`
